# horizon_metadata_plugin

./: AUTHORS  ChangeLog  MANIFEST.in  README.rst  reset_plugin.sh  setup.cfg
horizon_metadata_plugin.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
horizon_metadata_plugin/api/: __init__.py  cinder.py  cinder_with_meta.py  nova.py  nova_with_meta.py  swift.py  swift_with_meta.py
horizon_metadata_plugin/api/rest/: __init__.py  cinder.py  cinder_with_meta.py  sample_network.py  swift.py  swift_with_meta.py
horizon_metadata_plugin/content/containers/: browsers.py  forms.py  panel.py  tables.py  tests.py  urls.py  views.py
horizon_metadata_plugin/content/images/: __init__.py  panel.py  tests.py  urls.py  views.py
horizon_metadata_plugin/content/images/images/: forms.py  tests.py  urls.py  views.py
horizon_metadata_plugin/content/images/snapshots/: forms.py  urls.py  views.py
horizon_metadata_plugin/content/volumes/: panel.py  tabs.py  test.py  urls.py  views.py
horizon_metadata_plugin/content/volumes/backups/: urls.py  (+1 more)
horizon_metadata_plugin/enabled/: _1040_project_volumes_panel.py  _1050_project_images_panel.py  _3100_add_container_meta_panel.py  _3100_add_image_meta_panel.py  _3100_add_volume_meta_panel.py  _3101_container_metadata.py  _3101_images_metadata.py  _3101_nova_metadata.py  _60_admin_remove_panel.py
horizon_metadata_plugin/enabled/old/: _3100_horizon_metadata.py  _3101_volumes_metadata.py
horizon_metadata_plugin/templates/: _metadata.html
horizon_metadata_plugin/templates/horizon_metadata_plugin/: _modal_form_metadata.html
(+40 files in other folders)
